--- a/user/themes/tictactoc/scss/partials/_mist.scss
+++ b/user/themes/tictactoc/scss/partials/_mist.scss
@@ -260,8 +260,12 @@ body {
 
 .cell {
   display: block;
-  margin: 0 -30px;
+  margin: 0 -24px;
   
+  @media only screen and (min-width:480px) {
+    margin: 0 -30px;
+  }
+
   @media only screen and (min-width:650px) {
     margin: 0;
   }
